fix dropdown-menu alignment to the right

--- a/StratisCore.UI/src/scss/_custom.scss
+++ b/StratisCore.UI/src/scss/_custom.scss
@@ -71,6 +71,10 @@ img {pointer-events: none !important;}
           font-size: 1rem;
           color: $gray-500;
         }
+        &.dropdown-menu-right {
+          right: 0 !important;
+          left: auto !important;
+        }
       }
     }
   }
@@ -174,9 +178,6 @@ img {pointer-events: none !important;}
     .stake-type {
       padding: 1.125rem 1.25rem 0;
       background-color: $white;
-    }
-    .card-body {
-      dl, dt, dd {margin-bottom: 0;}
     }
   }
 
@@ -449,6 +450,11 @@ img {pointer-events: none !important;}
     flex-direction: column;
     justify-content: center;
     overflow: auto;
+    // special addresses
+    .tab-content {
+        flex: 0 0 100% !important;
+        max-width: 100% !important;
+    }
   }
   .myAddress {
     .btn {&:hover {cursor: pointer;}}
@@ -493,6 +499,14 @@ img {pointer-events: none !important;}
   }
 }
 
+// for cross-chain modal look
+.purple-shadow {
+  .modal-content {
+    border: 1px solid $purple !important;
+    box-shadow: 0 5px 20px 0 rgba($purple,.4) !important;
+  }
+}
+
 ////// Smart Contracts
 .smartcontracts {
   .card {
@@ -521,10 +535,6 @@ img {pointer-events: none !important;}
       td {
         padding: .75rem .25rem !important;
         vertical-align: middle;
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        max-width: 150px;
         // amount
         strong {color: $black;}
         small {color: rgba($black, .7);}
@@ -640,30 +650,6 @@ img {pointer-events: none !important;}
     padding: .75rem .4rem;
   }
   &.modal-footer {padding: 0 15px;}
-}
-
-/// MODAL SEND
-.nav-item {
-  .nav-link {
-    &.active {
-      &.purple {
-        background-color: $purple !important;
-        color: $white !important;
-      }
-      &.blue {
-        background-color: $primary !important;
-        color: $white !important;
-      }
-    }
-    &.purple {
-      border-color: $purple !important;
-      color: $gray-500 !important;
-    }
-    &.blue {
-      border-color: $primary !important;
-      color: $gray-500 !important;
-    }
-  }
 }
 
 /// LOADING ANIM
